--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/material-nextjs": "^6.3.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "html-react-parser": "^5.2.2",
+    "isomorphic-dompurify": "^2.21.0",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
